<resources>
    <string name="app_name">Facts Nepal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Manish</string>
    <string name="nav_header_subtitle">manish@naxa.com.np</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Saved</string>


    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="demo_fact">Mount Everest have more people killed than it’s height</string>
    <string name="demo_survey_question">Who do you think will win upcoming election?</string>
    <string name="actions_notification">Notification</string>
    <string name="transtion_fact_list_details">facts.image</string>
    <string name="facebook_app_id">415920922507619</string>
    <string name="msg_invalid_input">Please enter valid %s</string>
    <string-array name="gender_options">
        <item>Non-Binary</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="action_next">NEXT</string>
    <string name="action_skip">skip</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu odio eu leo molestie vestibulum ut sed ligula. Donec nec est vel purus pellentesque consectetur at eget dolor. In convallis libero non lorem mollis ultrices. Mauris quis metus ac quam aliquam aliquam. Ut arcu arcu, dictum non scelerisque in, semper non mauris. Sed tincidunt justo vel dui dictum laoreet sed sit amet arcu. Sed ut mattis quam, in sagittis tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis consequat felis. Maecenas eget elementum ex, nec cursus nisl. Vivamus vel suscipit felis. Donec rutrum ex sit amet augue consectetur, at vulputate tellus porta. Suspendisse vel tristique quam. Nulla sed porttitor risus. Praesent tellus est, egestas at magna quis, rutrum luctus ipsum. Vestibulum sed finibus velit, quis egestas leo.  Maecenas volutpat nulla id ullamcorper sollicitudin. Integer laoreet lobortis odio, eget sodales lorem iaculis in. Nunc sit amet lacus eget felis suscipit ultricies. Donec molestie pulvinar nibh, et pellentesque quam porta nec. Sed luctus elementum quam, porttitor pulvinar erat commodo sodales. Sed sed dolor vel arcu malesuada lacinia. Donec a quam porta, mollis tellus ut, eleifend lacus. Nullam mattis, nunc nec iaculis gravida, ante augue consequat ipsum, ac vehicula est tellus vitae est. Aliquam leo ante, hendrerit ac elit sed, mattis cursus turpis. Praesent sed mi purus. Aenean in volutpat nisl. Fusce laoreet pharetra magna, nec semper metus eleifend non.  Fusce mollis lacus eget dictum sodales. Vestibulum egestas eros eget magna aliquam, in accumsan metus cursus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse potenti. Vestibulum vel libero auctor, aliquam ante sed, egestas tellus. Nam efficitur leo leo, non tristique quam malesuada id. Suspendisse ac risus ac tellus vestibulum sagittis.  Etiam quis orci ultricies, tristique mi et, gravida libero. Aenean posuere vestibulum diam ac accumsan. Aliquam rhoncus sem vel bibendum maximus. Nullam vitae sapien in purus iaculis pulvinar. Nulla facilisi. Vestibulum at mi eget metus sagittis iaculis. Pellentesque eget feugiat velit. Proin id ultricies arcu. Mauris dapibus sapien magna, in facilisis eros hendrerit tempus. Fusce vulputate mollis arcu, quis rutrum magna fringilla sit amet. Nunc vitae lorem sollicitudin, aliquet neque eget, tincidunt mauris. Sed a aliquam lorem.  Sed consequat posuere libero, lobortis porta ligula vestibulum sed. Maecenas sit amet egestas risus. Sed posuere efficitur lobortis. Sed vehicula, enim non pellentesque blandit, lectus massa commodo velit, in consequat nisi turpis quis orci. Suspendisse potenti. Fusce pellentesque est at mauris tincidunt, id varius massa ornare. Sed eget risus placerat, interdum ipsum a, fringilla lectus. Praesent vel pellentesque magna. Nullam vulputate tincidunt nulla, eu tristique velit molestie sit amet. Proin non mauris vestibulum, pulvinar ante nec, finibus risus. Nullam convallis ipsum in augue sagittis vehicula quis non felis. Mauris tempor eros et neque sagittis eleifend. Ut convallis tempor nisi vel interdum. Sed rhoncus ipsum sit amet sapien venenatis lacinia.</string>

    <string name="demo_category">Education</string>
    <string name="demo_date">31 March, 2019</string>

    <string name="demo_likes">263</string>
    <string name="action_share">Share</string>
    <string name="title_share_your_opinion">Share your opinion</string>
    <string name="action_start_survey">start survey</string>
    <string name="demo_company_profile">Ncell Pvt. Ltd. has been working in Nepal since 2004 as the first private mobile operator in the country. We are committed to being the best local mobile network for the people living in the country. We provide services of international quality with a local touch. Most of our employees are Nepali and our services are designed to meet the needs of the local society. \n\nThis survey is about the services that we are providing and the response of it towards end users between age group 30 to 35</string>
    <string name="demo_survey_question_1">1. How likely is that you would recommend this company to a friend or colleague?</string>
    <string name="demo_very_satisfied">Very Satisfied</string>
    <string name="demo_somewhat_satisfied">Somewhat satified</string>
    <string name="demo_not_sure_satisfied">Neither satisfied or dissafied</string>
    <string name="demo_not_satisfied">Very dissatisfied</string>
    <string name="action_ok">ok</string>


    <string-array name="demo_options_array">
        <item>Nepali Congress</item>
        <item>Nepal Communist Party</item>
        <item>Rastriya Janata Party</item>
        <item>Bibeksheel Sajha Party</item>
    </string-array>

    <!--gps location-->
    <string name="get_location">Record Location</string>
    <string name="getting_location">Loading Location</string>
    <string name="please_wait_long">Please wait. This could take a few minutes.</string>
    <string name="save_point">Save GeoPoint</string>
    <string name="get_point">Start GeoPoint</string>
    <string name="geopoint_view_read_only">View GeoPoint</string>
    <string name="cancel_location">Cancel</string>
    <string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
    <string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
    <string name="location_accuracy">Accuracy is %f$s m</string>
    <string name="location_metadata">Satellites available: %1$d/24\n\nTime elapsed: %2$s</string>
    <string name="action_home">HOME</string>
    <string name="toolbar_title_bookmarked">Bookmarked Fact(s)</string>


    <string name="dialog_action_ok">OK</string>
    <string name="dialog_error_title">Unexpected Error Occurred.</string>
    <string name="dialog_error_title_sync_failed">Data Sync Failed (Code: %1$s)</string>
    <string name="dialog_title_warning_logout"> Caution</string>
    <string name="dialog_warning_logout_pos">Delete and logout</string>
    <string name="dialog_warning_logout_neg">Dismiss</string>
    <string name="dialog_title_error_register">Error Registering.</string>
    <string name="dialog_error_register">Could not register to sever.\n • Try again in a few minutes \n • If error persists reinstall app</string>
    <string name="dialog_title_delete_sites">Delete %1$d sites</string>
    <string name="dialog_msg_delete_site">%s will be permanently deleted</string>
    <string name="dialog_action_delete">Delete</string>
    <string name="dialog_action_hide">Hide</string>
    <string name="dialog_unexpected_error_title">An unexpected error occurred.</string>
    <string name="dialog_action_dismiss">Cancel</string>
    <string name="msg_bookmared">Bookmarked</string>
    <string name="msg_not_bookmarked">Not Bookmarked</string>
    <string name="msg_can_not_refresh_feed">Couldn\'t refresh feed</string>

    <!-- walk through screen -->
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="got_it">GOT IT</string>

    <string name="slide_1_title">Introduction 1!</string>
    <string name="slide_1_desc">Short Description 1!</string>

    <string name="slide_2_title">Introduction 2!</string>
    <string name="slide_2_desc">Short Description 2!</string>

    <string name="slide_3_title">Introduction 3!</string>
    <string name="slide_3_desc">Short Description 3!</string>

    <string name="slide_4_title">Introduction 4!</string>
    <string name="slide_4_desc">Short Description 4!</string>

    <string name="slide_5_title">Introduction 5!</string>
    <string name="slide_5_desc">Short Description 5!</string>
    <string name="subtext">subtext</string>
    <string name="primary_short">Primary Short</string>
    <string name="un_bookmark">Un Bookmark</string>
    <string name="view_fact">View Fact</string>
    <string name="storage_rationale">Facts need storage permission to download photos so they can be shared directly</string>
    <!--end of walk through screen-->

</resources>
