<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_item_facts_feed_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_large"
    app:cardBackgroundColor="#252525"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView

            android:id="@+id/iv_feed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/fab"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/tv_feed_card_category"
            android:scaleType="fitCenter"
            app:layout_constraintVertical_bias="0.411"
             />


        <ImageView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/gradient_feed_image"

            app:layout_constraintBottom_toTopOf="@id/view"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_feed_card_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/demo_fact"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintRight_toRightOf="@id/wrapper"
            app:layout_constraintTop_toTopOf="@+id/wrapper" />


        <TextView
            android:drawableStart="@drawable/ic_date_range_24dp"
            android:drawableLeft="@drawable/ic_date_range_24dp"
            android:id="@+id/tv_feed_card_date"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/demo_date"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_feed_card_title" />

        <TextView
            android:id="@+id/tv_feed_card_category"
            style="@style/Feed.Widget.Chip.Orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:paddingLeft="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:text="@string/demo_category"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_feed_card_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_feed_card_title" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#533F42"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/btn_like"
            app:layout_constraintRight_toRightOf="@id/btn_share" />

        <TextView
            android:id="@+id/btn_like"

            style="@style/Text.Compound.Count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/demo_likes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_bookmark"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="109dp" />

        <CheckBox
            android:id="@+id/btn_bookmark"

            style="@style/Text.Compound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:button="@drawable/ic_like_stateful"
            android:text="@string/action_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_share"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_like"
            tools:layout_editor_absoluteY="109dp" />


        <TextView

            android:id="@+id/btn_share"
            style="@style/Text.Compound.Share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/action_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_bookmark" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/fab"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="OPEN FACT"
            app:cornerRadius="56dp"
            app:icon="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.921"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.91" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>