<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_bookmarked_facts_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:text="@string/primary_short"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/iv_bookmarked_facts_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bookmarked_facts_sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/subtext"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/iv_bookmarked_facts_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookmarked_facts_title" />

        <ImageView
            android:id="@+id/iv_bookmarked_facts_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_fact_un_bookmarked"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/button_background"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".47"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:minWidth="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/white_80"
            android:text="Un Bookmark"
            android:drawableLeft="@drawable/ic_bookmark_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_bookmarked_facts_image"
            />

        <Button
            android:id="@+id/btn_view_bookmarked_fact_details"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/button_background"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".47"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:minWidth="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/view_fact"
            android:textColor="@color/white_80"
            android:drawableLeft="@drawable/ic_open_in_new_white_24dp"
            app:layout_constraintStart_toEndOf="@+id/btn_fact_un_bookmarked"
            app:layout_constraintTop_toTopOf="@+id/btn_fact_un_bookmarked"
            app:layout_constraintEnd_toEndOf="parent"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

